# Samoyeds

./: .gitignore  .gitmodules  CMakeLists.txt  MiniCPM_Samoyeds.py  MiniCPM_megablocks.py  MiniCPM_transformers.py  MiniCPM_venom.py  MiniCPM_vllm.py  README.md  build.sh  deepseek_Samoyeds.py  deepseek_megablocks.py  deepseek_transformers.py  deepseek_vllm.py  install.sh  mixtral_Samoyeds.py  mixtral_megablocks.py  mixtral_transformers.py  mixtral_venom.py  mixtral_vllm.py  moe_megablocks.py  openmoe_Samoyeds.py  openmoe_transformers.py  openmoe_vllm.py  qwen2_moe_Samoyeds.py  qwen2_moe_megablocks.py  qwen2_moe_transformers.py  qwen2_moe_venom.py  qwen2_moe_vllm.py  requirements.txt  setup.py
MiniCPM/: modeling_MiniCPM.py  modeling_MiniCPM_samoyeds.py  modeling_MiniCPM_venom.py  modeling_MiniCPM_vllm.py
artifacts/: README_ARTIFACT.md
artifacts/MoE/: figure14_plot.ipynb  figure14_scripts.sh  figure17_plot.ipynb  (+1 more)
benchmark/: benchmark_MoE.py
deepseek/: modeling_deepseek_megablocks.py  modeling_deepseek_samoyeds.py  modeling_deepseek_vllm.py
helper/: prompt.py
mixtral/: modeling_mixtral.py  modeling_mixtral_megablocks.py  modeling_mixtral_samoyeds.py  modeling_mixtral_vLLM.py  modeling_mixtral_venom.py
module/: util.py
openmoe/: modeling_openmoe.py  modeling_openmoe_samoyeds.py  router.py
patch/: cast.h  deepseek.py  qwen2_moe.py
qwen2_moe/: configuration_qwen2_moe.py  modeling_qwen2_megablocks.py  modeling_qwen2_moe_samoyeds.py  modeling_qwen2_moe_venom.py  modeling_qwen2_moe_vllm.py
samoyeds_mod/: CMakeLists.txt
venom_helper/: grouped_nmv_tensor.py
(+46 files in other folders)
